New Features:

Enhancements:
- Added the Bronze caches to the list of supported containers.
- Added full quest-related gossip support for The Jade Forest. (This includes all Alliance and Neutral gossips.)
- Added full quest-related merchant support for The Jade Forest.

Removals:

Fixes:
- Fixed a rare bug where an error could be thrown for weapon comparison in legacy content while Item Level is selected for Quest Rewards.