@@ -2,6 +2,7 @@ New Features:
 
 Enhancements:
 - Added the Bronze caches to the list of supported containers.
+- Looted items that begin a quest should now have their quests accepted.
 - Added full quest-related gossip support for The Jade Forest. (This includes all Alliance and Neutral gossips.)
 - Added full quest-related merchant support for The Jade Forest.
 
